# redhat-ai-workflow

./: .cursorrules  .flake8  .gitignore  .jscpd.json  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  TODO.md  config.example.json  config.json.example  pyproject.toml  requirements.txt
.claude/: ANALYSIS-RESULTS-FINAL.md  documentation-updates-summary.md  layer5_demo.py  layer5_phase2_demo.py  layer5_phase3_demo.py  layer5_phase4_demo.py  layer5_phase5_demo.py  ralph-loop.local.md  ralph-loop.local.md.disabled  skill-analysis-tracking.md  skill-tool-usage-report.md  tool-reorganization-summary.md
.claude/commands/: add-project.md  agents.md  appinterface-check.md  beer.md  bootstrap-knowledge.md  cancel-pipeline.md  check-docs.md  check-feedback.md  check-namespaces.md  check-prs.md  check-secrets.md  ci-health.md  ci-retry.md  cleanup-branches.md  clone-issue.md  close-issue.md  close-mr.md  coffee.md  create-issue.md  create-mr.md  debug-prod.md  debug-tool.md  deploy-ephemeral.md  deploy.md  detect-project.md  env-overview.md  explain-code.md  extend-ephemeral.md  find-similar.md  google-reauth.md  hotfix.md  integration-tests.md  investigate-alert.md  jira-hygiene.md  knowledge-learn.md  knowledge-list.md  knowledge-load.md  knowledge-refresh.md  knowledge-scan.md  knowledge-update.md  (+48 more)
.cursor/: mcp.json
.cursor/commands/: add-project.md  appinterface-check.md  beer.md  bootstrap-knowledge.md  cancel-pipeline.md  check-feedback.md  check-namespaces.md  check-secrets.md  ci-retry.md  cleanup-branches.md  close-issue.md  coffee.md  create-issue.md  create-mr.md  debug-prod.md  debug-tool.md  deploy-ephemeral.md  deploy.md  detect-project.md  env-overview.md  explain-code.md  extend-ephemeral.md  find-similar.md  google-reauth.md  hotfix.md  integration-tests.md  investigate-alert.md  knowledge-learn.md  knowledge-list.md  knowledge-load.md  (+43 more)
agents/: developer.md  developer.yaml  devops.md  incident.md  release.md  slack.yaml  universal.yaml
config/: context_resolver.py  test_exclusions.yaml  validators.py
docs/: AUDIT-REPORT.md  DEVELOPMENT.md  claude-code-integration.md  learning-loop.md  multi-agent-code-review.md  multiagent-model-selection.md  tool-organization.md
examples/: cursor-mcp-config.json
mcp-servers/: ARCHITECTURE.md
personas/: admin.md  admin.yaml  core.yaml  developer-slim.yaml  developer.md  developer.yaml  devops-slim.yaml  devops.yaml  incident-slim.yaml  incident.md  incident.yaml  release-slim.yaml  release.yaml  slack.yaml  universal.yaml
ptools/: sync_commands.py
scripts/: analyze_skill_tool_usage.py  claude_agent.py  fix_e304_final.py  fix_f401_remaining.py  fix_f541.py  generate_slides.py  get_slack_creds.py  integration_test.py  optimize_patterns.py  pattern_miner.py  reorganize_tools.py  reorganize_tools_final.py  run-super-linter.sh  skill_hooks.py  skill_test_runner.py  slack_daemon.py  slack_dbus.py  split_modules.py  update_module_imports.py  verify_tool_split.py
server/: auto_heal_decorator.py  cli_runner.py  config.py  debuggable.py  http_client.py  main.py  persona_loader.py  timeouts.py  tool_discovery.py  tool_registry.py  usage_context_injector.py  usage_pattern_checker.py  usage_pattern_classifier.py  usage_pattern_extractor.py  usage_pattern_learner.py  usage_pattern_optimizer.py  usage_pattern_storage.py  usage_prevention_tracker.py  utils.py
skills/: add_project.yaml  appinterface_check.yaml  beer.yaml  bootstrap_knowledge.yaml  cancel_pipeline.yaml  check_ci_health.yaml  check_integration_tests.yaml  check_mr_feedback.yaml  check_my_prs.yaml  check_secrets.yaml  ci_retry.yaml  cleanup_branches.yaml  clone_jira_issue.yaml  close_issue.yaml  close_mr.yaml  coffee.yaml  create_jira_issue.yaml  create_mr.yaml  debug_prod.yaml  deploy_to_ephemeral.yaml  environment_overview.yaml  explain_code.yaml  extend_ephemeral.yaml  find_similar_code.yaml  hotfix.yaml  investigate_alert.yaml  investigate_slack_alert.yaml  jira_hygiene.yaml  knowledge_refresh.yaml  konflux_status.yaml  learn_architecture.yaml  learn_pattern.yaml  mark_mr_ready.yaml  memory_cleanup.yaml  memory_edit.yaml  memory_init.yaml  memory_view.yaml  notify_mr.yaml  notify_team.yaml  rebase_pr.yaml  (+22 more)
tests/: __init__.py  conftest.py  test_agents.py  test_auto_heal.py  test_cli_runner.py  test_config.py  test_config_loader.py  test_http_client.py  test_jira_utils.py  test_mcp_integration.py  test_parsers.py  test_skills.py  test_usage_pattern_checker.py  test_usage_pattern_classifier.py  test_usage_pattern_learner.py  test_usage_phase4_integration.py  test_usage_phase5_optimization.py  test_utils.py
tool_modules/: __init__.py
tool_modules/aa-appinterface/: pyproject.toml
tool_modules/aa-appinterface/src/: __init__.py  server.py  tools.py
tool_modules/aa-gitlab/: README.md  pyproject.toml
tool_modules/aa-gitlab/src/: __init__.py  server.py  tools.py
tool_modules/aa-google-calendar/: pyproject.toml
tool_modules/aa-google-calendar/src/: __init__.py  server.py  tools.py
tool_modules/aa-jira/: pyproject.toml
tool_modules/aa-jira/src/: __init__.py  server.py  tools.py
tool_modules/aa-k8s/: pyproject.toml
tool_modules/aa-k8s/src/: __init__.py  server.py  tools.py
tool_modules/aa-kibana/: pyproject.toml
tool_modules/aa-kibana/src/: __init__.py  server.py  tools.py
tool_modules/aa-konflux/: pyproject.toml
tool_modules/aa-konflux/src/: __init__.py  server.py  tools.py
tool_modules/aa-prometheus/: pyproject.toml
tool_modules/aa-prometheus/src/: __init__.py  server.py  tools.py
tool_modules/aa-quay/: pyproject.toml
tool_modules/aa-quay/src/: __init__.py  server.py  tools.py
tool_modules/aa-slack/: env.template  pyproject.toml
tool_modules/aa-slack/src/: __init__.py  listener.py  persistence.py  server.py  slack_client.py  tools.py
tool_modules/aa-workflow/: pyproject.toml
tool_modules/aa-workflow/src/: __init__.py  claude_code_integration.py  constants.py  infra_tools.py  lint_tools.py  memory_tools.py  meta_tools.py  persona_tools.py  resources.py  server.py  session_tools.py  skill_engine.py  tools.py  workflow_tools.py
(+371 files in other folders)
