[project]
name = "aa-appinterface"
version = "0.1.0"
description = "AA MCP Server - appinterface tools"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
aa-appinterface = "aa_appinterface.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
