[project]
name = "aa-konflux"
version = "0.1.0"
description = "AA MCP Server - konflux tools"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
aa-konflux = "aa_konflux.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
