[project]
name = "aa-workflow"
version = "0.1.0"
description = "AA MCP Server - workflow tools"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
aa-workflow = "aa_workflow.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
